# fuver

./: Cargo.toml  README.md  ThirdPartyNotices.txt  build.rs  fuver.toml
src/: build.rs  buildmeta.rs  buildversion.rs  cli.rs  fuver.rs  identifier.rs  increment.rs  lib.rs  main.rs  pre.rs  show.rs  version.rs
