[package]
name = "fuver"
version = "0.6.0"
authors = ["futa-t"]
edition = "2021"
description = "バージョン管理用のCLIツールです"
repository = "https://github.com/futa-t/fuver"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
exclude = ["fuver.toml"]

[dependencies]
chrono = "0.4.39"
clap = {version = "4.5.27", features = ["derive"]}
git2 = "0.20.0"
serde = {version = "1.0", features = ["derive"]}
toml = {version = "0.8.20"}
